--- a/nested-stacks/template-lambda.yaml
+++ b/nested-stacks/template-lambda.yaml
@@ -45,7 +45,7 @@ Parameters:
 
 Globals:
   Function:
-    Runtime: python3.8
+    Runtime: python3.9
     MemorySize: 256
     Timeout: 60
     Handler: lambda_function.lambda_handler
@@ -61,7 +61,10 @@ Resources:
       Description: Common layer to interact with dynamo
       LayerName: !Sub "rental-common-layer-${environment}"
       RetentionPolicy: Retain
-      CompatibleRuntimes: python3.8
+      CompatibleRuntimes:
+        - python3.9
+    Metadata:
+      BuildMethod: python3.9
 
   ## LAMBDA FUNCTION USER IMPLEMENTATIONS ##
   ReadUser:
