--- a/nested-stacks/template-dynamo.yaml
+++ b/nested-stacks/template-dynamo.yaml
@@ -14,9 +14,13 @@ Resources:
       AttributeDefinitions:
         - AttributeName: user_id
           AttributeType: S
+        - AttributeName: user_email
+          AttributeType: S
       KeySchema:
         - AttributeName: user_id
           KeyType: HASH
+        - AttributeName: user_email
+          KeyType: RANGE
       BillingMode: PAY_PER_REQUEST
       TableName: !Sub users-table-${environment}
     UpdateReplacePolicy: Retain
